# music-dir-player-rust

./: Cargo.toml  Fun-O-FormMusicDirPlayer.drawio  LICENSE  README.md
src/: cli.rs  controller.rs  file_utils.rs  main.rs  music_player.rs  settings_changed.rs
